# agentforge

./: CHANGELOG.md  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
agentforge/: __init__.py  audit.py  cli.py  config.py  connect.py  models.py  personas.py  policy.py  registry.py  runtime.py  schema.py  templates.py
agentforge/interop/: __init__.py  catalog.py  frameworks.py  pm.py
data/: org_templates.json
demos/: README.md  _build_orgs.py
demos/01-incident-response/: SCENARIO.md  org.json
demos/02-soc2-audit-readiness/: SCENARIO.md  org.json
demos/03-ai-research-lab/: SCENARIO.md  org.json
demos/04-mobile-app-launch/: SCENARIO.md  org.json
demos/05-due-diligence-deal-team/: SCENARIO.md  org.json
demos/06-mlops-platform-team/: SCENARIO.md  org.json
demos/07-grant-proposal-writers/: SCENARIO.md  org.json
demos/08-customer-support-escalation/: SCENARIO.md  org.json
demos/09-energy-trading-desk/: SCENARIO.md  org.json
demos/10-jtf-meridian-export/: SCENARIO.md
docs/: ENTERPRISE.md
examples/: help.txt  schema.txt  version.txt
tests/: test_connect.py  test_enterprise.py  test_schema.py  test_smoke.py
